[project]
name = "ai-agents"
version = "2.1.0"
description = "Simple AI tool decorator for LLM provider usage"
requires-python = ">=3.13"
authors = [
    { name = "Jason Rigby", email = "hello@jasonrig.by" },
]
dependencies = [
    "pydantic>=2.13.4",
    "jsonref>=1.1.0",
]
[project.optional-dependencies]
gemini = [
    "google-genai>=2.8.0",
]
anthropic = [
    "anthropic>=0.109.1",
]
openai = [
    "openai>=2.41.1",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
ai_agents = ["py.typed"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
